--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,85 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@font-face {
+  font-family: SweiGothicCJKtc-Regular;
+  src: url(https://cdn.jsdelivr.net/gh/max32002/swei-gothic@2.129/WebFont/CJK%20TC/SweiGothicCJKtc-Regular.woff2) format("woff2")
+  , url(https://cdn.jsdelivr.net/gh/max32002/swei-gothic@2.129/WebFont/CJK%20TC/SweiGothicCJKtc-Regular.woff) format("woff");
+}
+.maincontainer {
+  width: 375px;
+  display: flex;
+  align-self: center;
+  margin: auto;
+}
+/* General Styles */
+/* RWD Container */
+.container {
+  width: 375px;
+  height: 812px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+/* @media (min-width: 320px) {
+  .container {
+    width: 275px;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media (min-width: 375px) {
+  .container {
+    width: 330px;
   }
 }
 
-.card {
-  padding: 2em;
+@media (min-width: 425px) {
+  .container {
+    width: 380px;
+  }
+} */
+
+
+/* body */
+body {
+  font-size: 16px;
+  line-height: 1.6;
+  /* background-color: #FFFCFB; */
+  
 }
 
-.read-the-docs {
-  color: #888;
+
+/* Layout */
+/* .mainLayout {
+  display: grid;
+  min-height: 100vh;
+  grid-template-areas: 
+    'header'
+    'content'
+    'footer'
+  ;
+  grid-template-rows: auto 1fr auto;
+  width: 375px;
 }
+
+.layoutHeader {
+  grid-area: header;
+  padding: 0;
+  height: auto;
+  line-height: 1.6;
+  background-color: #4D6447;
+}
+
+.layoutFooter {
+  grid-area: footer;
+  padding: 0;
+  height: auto;
+  line-height: 1.6;
+  background-color: #4D6447;
+  width: 100%;
+  margin: 0;
+}
+
+.layoutContent {
+  grid-area: content;
+} */
+
+
+
+
+
