--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   width: 375px;
   display: flex;
   align-self: center;
-  margin: auto;
+  margin: 0;
 }
 /* General Styles */
 /* RWD Container */
