StartPage Css modify

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@
   width: 375px;
   height: 812px;
 }
+.start-page {
+  width: 375px;
+  height: 812px;
+}
 
 /* @media (min-width: 320px) {
   .container {
