--- a/src/components/StartPageContent/startpagecontent.module.css
+++ b/src/components/StartPageContent/startpagecontent.module.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500;600&display=swap');
-.content {
-    width: 100%;
-    height: 812px;
+.Start {
+    width: 375px;
+    height:812px;
 }
 .img {
     position: absolute;
-    width: 60px;
-    height: 60px;
+    width: 45px;
+    height: 45px;
     left: 20px;
     top: 45px;
     background: #F5F6FA;
@@ -14,10 +14,10 @@
   
 .arrow {
     position: absolute;
-    width: 35px;
-    height: 35px;
-    left: 10px;
-    top: -360px;
+    width: 45px;
+    height: 45px;
+    left: 20px;
+    top: 45px;
     margin-left: 10px;
     border-radius: 50%;    
 }
@@ -25,7 +25,7 @@
 .text{
     position: absolute;
     left: 75px;
-    top: -295px;
+    top: 105px;
     width: 224px;
     height: 31px;
     font-family: 'Inter', sans-serif;
@@ -44,7 +44,7 @@
     width: 300px;
     height: 17px;
     left: 72px;
-    top: 290px;
+    top: 695px;
 
     font-family: 'Inter', sans-serif;
     font-style: normal;
@@ -58,7 +58,7 @@
     position: absolute;
     width: 335px;
     left: 20px;
-    top: -85px;
+    top: 321px;
     background-color: #ffffff;
     
 }
@@ -84,16 +84,13 @@
     border-radius: 12px;
 
 }
-.btn2:hover,.btn:hover{ 
-    color: #FFFFFF; 
-    background: #9775FA !important; 
-}
+
 .btn4{
     position: absolute;
-    width: 300px;
+    width: 30px;
     height: 17px;
     left: 262px;
-    top: 290px;
+    top: 695px;
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
